tests: implementadas pruebas unitarias para dar cobertura completa a clase InventoryService